[home] fix input on small screens.

--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,10 @@ form.answers button.button.large.true.reveal{
   background:#8ec53f url('/img/tick.png') 20px center no-repeat;
 }
 
+form.answers button.button.large.selected.false.reveal{
+  background:#f5331d url('/img/cross.png') 20px center no-repeat;
+  background-image: -webkit-image-set(url(/img/cross.png) 1x, url(/img/cross@2x.png) 2x);
+}
 
 form.answers input[type=checkbox] {
   display:none;
@@ -109,6 +113,7 @@ button.intro {
   box-shadow: none;
   font-weight: 600;
   border-radius: 5px;
+  margin:0;
 }
 
 button.admin {
@@ -138,6 +143,8 @@ input.intro {
   padding: 20px;
   font-size: 24px;
   text-align: center;
+  margin:0;
+  margin-bottom:15px;
 }
 
 .custom input {
@@ -224,8 +231,8 @@ input.intro {
 }
 
 .home_title {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-top: 40px;
+  margin-bottom: 30px;
   color: #56C7B2;
 }
 
@@ -259,7 +266,3 @@ button.admin.alter {
   padding: 2px !important;
 }
 
-/* index */
-button.intro {
-  margin-left: 10px;
-}
